@@ -1,29 +1,0 @@
-#!/bin/sh
-
-# check if svn info available (do not write anything)
-svn info 2> /dev/null > /dev/null
-
-if [ $? = 0 ] ; then 
-
-# available: get svn revision, write to file svnnewrev.h
-   svn_rev="$(svnversion -n)"
-   echo $svn_rev > svnnewrev.h
-
-# check if a previous svnrev.h file exists
-   if test -f svnrev.h ; then
-# svnrev.h existing: check if new and previous svnrev.h files differ
-      diff -q svnnewrev.h svnrev.h 
-
-      if [ $? = 1 ] ; then 
-# they differ: update file version.f90
-         mv svnnewrev.h svnrev.h 
-         awk '/svn_revision/{ $6 = "'"'$svn_rev'"'" };1' version.f90 > tmp.f90
-         mv tmp.f90 version.f90
-      fi
-   else
-# svnrev.h not existing: create one, update file version.f90
-      mv svnnewrev.h svnrev.h 
-      awk '/svn_revision/{ $6 = "'"'$svn_rev'"'" };1' version.f90 > tmp.f90
-      mv tmp.f90 version.f90
-   fi
-fi
